--- a/src/app/page/doacao/doacao.page.html
+++ b/src/app/page/doacao/doacao.page.html
@@ -13,7 +13,7 @@
     </ion-toolbar>
   </ion-header>
   <ion-item>
-    <ion-label class="my-label" position="stacked">Doações da Loja: {{this.modelData.idEstab}}</ion-label>
+    <ion-label class="my-label" position="stacked">Doações da loja: {{this.modelData.idEstab}}</ion-label>
     <ion-input readonly class="my-value">{{this.modelData.totalDoacao | currency:'':''}}</ion-input>
   </ion-item>
   <ion-item>
